# fastapi_template

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: fe177884442d_initial_migration.py
app/: Dockerfile  log_config.yml  main.py
app/models/: database.py  models.py
