[tool.poetry]
name = "062-section2-completebackend"
version = "0.1.0"
description = ""
authors = ["Camiloez <camilo.escobar.z@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
databases = {extras = ["sqlite"], version = "^0.9.0"}
pyyaml = "^6.0.2"
alembic = "^1.14.0"
tortoise-orm = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
